--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/paddocca
 spring.datasource.username=postgres
 spring.datasource.password=root
